# myml

./: .gitignore  AGENTS.md  LICENSE  README.md  poe_tasks.toml
.github/workflows/: ci.yml  python-lib-tag.yml
corpus/: README.md
corpus/cases/alias-not-supported/: input.yaml  meta.json
corpus/cases/anchor-not-supported/: input.yaml  meta.json
corpus/cases/block-mapping-sequence/: expected_emit_standard.yaml  expected_node_graph.json  input.yaml  meta.json
corpus/cases/block-mapping-sequence-expanded/: expected_emit_strict.yaml  expected_node_graph.json  input.yaml  meta.json
corpus/cases/block-scalars/: expected_node_graph.json  meta.json
corpus/cases/comments-and-empty-lines/: expected_emit_default.yaml  expected_emit_roundtrip.yaml  expected_node_graph.json  meta.json
corpus/cases/duplicate-keys/: meta.json
corpus/cases/empty-flow-containers-with-comments/: meta.json
corpus/cases/flow-nested-container/: input.yaml  meta.json
corpus/cases/flow-scalars-and-comments/: expected_emit_standard.yaml  expected_emit_strict.yaml  input.yaml  meta.json  (+1 more)
docs/: lang.md
libs/py-myml/: README.md  pyproject.toml
libs/py-myml-tiny/: README.md  pyproject.toml
libs/py-myml-tiny/src/: myml_tiny.py
libs/py-myml-tiny/tests/: test_corpus.py  test_public_api.py
libs/py-myml/src/myml/: __init__.py  api.py  emitter.py  errors.py  modes.py  nodes.py  parser.py  roundtrip.py
libs/py-myml/tests/: test_corpus.py  test_format_aware_api.py  test_public_api.py
openspec/: config.yaml
prompts/: corpus.md  index.md  lang.md  python.md
scripts/: release-python-lib
(+256 files in other folders)
