[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "myml-tiny"
version = "0.1.1"
description = "Tiny pure-Python reader for the Myml language"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Myml contributors" },
]
dependencies = []

[tool.hatch.build.targets.wheel]
only-include = ["src/myml_tiny.py"]
sources = ["src"]
