[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "myml"
version = "0.1.0"
description = "Pure-Python parser and emitter for the Myml language"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Myml contributors" },
]
dependencies = []

[project.optional-dependencies]
speedups = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
