[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project]
name = "myml"
version = "0.2.1"
description = "Pure-Python parser and emitter for the Myml language"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Myml contributors" },
]
dependencies = []

[project.optional-dependencies]
speedups = []
